--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ img{
   }
 
 body{
-    background: url('pictures/background_lights.jpeg') no-repeat center center fixed;
+    background: url('background_lights.jpeg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
