--- a/style.css
+++ b/style.css
@@ -3,15 +3,13 @@
     margin: 25px;
   }
 
-
-
 img{
     width: 100%;
     padding-bottom: 25px;
   }
 
 body{
-    background: url('background_lights.jpeg') no-repeat center center fixed;
+    background: url("background_lights.jpeg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
