--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(pictures/background_lights.jpeg) no-repeat center center fixed;
+    background-image: url(https://stongsak421.github.io/pictures/background_lights.jpeg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
