--- a/style.css
+++ b/style.css
@@ -1,5 +1,26 @@
 body{
-    background-image: url(../pictures/background_lights.jpeg) no-repeat center center fixed;
+    background-image: url(pictures/background_lights.jpeg) no-repeat center center fixed;
     color: white;
   }
 
+.jumbotron{
+    background-color: rgba(100,100,100,0.5);
+    margin: 25px;
+  }
+
+img{
+    width: 100%;
+    padding-bottom: 25px;
+  }
+
+h2 {
+    padding-bottom: 25px;
+  }
+
+.jumbotron p {
+    font-size: 0.90em;
+  }
+
+tr, td, th {
+    color: black;
+  }
