--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ img{
 
 
 body{
-    background: url('pictures/background_lights_2.jpeg') no-repeat center center fixed;
+    background: url('pictures/background_lights.jpeg') no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -26,6 +26,10 @@ h2 {
   }
 
 h4 {
+  font-family: 'Raleway', sans-serif;
+}
+
+h6 {
   font-family: 'Raleway', sans-serif;
 }
 
